feat: add peers handler
